# poem-typed-multipart

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check-pr.yml
poem-typed-multipart-macro/: Cargo.toml
poem-typed-multipart-macro/src/: lib.rs
src/: lib.rs  map.rs  part.rs
