[package]
name = "poem-typed-multipart"
version = "0.1.1"
edition = "2024"
authors = ["Nils de Groot <nils@peeko.nl>"]
description = "Typesafe multipart extractor for poem"
license = "MIT"
documentation = "https://docs.rs/poem-typed-multipart"
homepage = "https://github.com/Reclamefolder/poem-typed-multipart"
repository = "https://github.com/Reclamefolder/poem-typed-multipart"

[workspace]
resolver = "2"
members = [
	".",
	"poem-typed-multipart-macro",
]

[features]
default = ["derive"]
derive = ["dep:poem-typed-multipart-macro"]
json = ["dep:serde", "dep:serde_json"]
bytes = ["dep:bytes"]

[dependencies]
poem = { version = "3.1.7", features = ["multipart"] }
thiserror = "2.0.12"
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
bytes = { version = "1.10.1", optional = true }
poem-typed-multipart-macro = { version = "0.1.1", optional = true }
